Debug nav principale et section hobbies faite

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -407,10 +407,10 @@
 			<h1 class="hidden">Mes hobbies</h1>
 
 			<img id="hobbies_button" src="./img/ref/hobby.svg" width="90" height="90" alt="La lettre H dans une étoile">
+			<div id="overlay"></div>
+			<ul class="no_display" id="hobbies_list">
 
-			<ul class="hover">
-
-				<li><a id="close2" title="Fermer la section de mes hobbies" href="" hreflang="fr">Fermer</a></li>
+				<li><img id="close2" src="./img/icons/croixblanche.svg" alt="Une croix blanche" width="13" height="13"></li>
 
 				<li>
 
