Section services (hover) faite

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -42,10 +42,10 @@
 					<img id="nav_second_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul id="second_dropdown" class="no_display">
-						<li><a title="Aller vers la section de mes compétences" href="#ui" hreflang="fr"><abbr lang="en" title="User Interface">UI</abbr></a></li>
-						<li><a title="Aller vers la section de mes compétences" href="#ux" hreflang="fr"><abbr lang="en" title="User EXperience">UX</abbr></a></li>
-						<li><a title="Aller vers la section de mes compétences" href="#frontend" hreflang="fr">Front&ndash;End</a></li>
-						<li><a title="Aller vers la section de mes compétences" href="#backend" hreflang="fr">Back&ndash;End</a></li>
+						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr"><abbr lang="en" title="User Interface">UI</abbr></a></li>
+						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr"><abbr lang="en" title="User EXperience">UX</abbr></a></li>
+						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr">Front&ndash;End</a></li>
+						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr">Back&ndash;End</a></li>
 					</ul>
 
 				</li>
@@ -55,10 +55,10 @@
 					<img id="nav_third_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul class="no_display" id="third_dropdown">
-						<li><a title="Aller vers la section de mes formations" href="#hepl" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</a></li>
-						<li><a title="Aller vers la section de mes formations" href="#formation" hreflang="fr">Formation en ligne :&nbsp;<abbr lang="fr" title="Deux Dimensions">2D</abbr></a></li>
-						<li><a title="Aller vers la section de mes formations" href="#helmo" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</a></li>
-						<li><a title="Aller vers la section de mes formations" href="#secondaire" hreflang="fr">&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</a></li>
+						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</a></li>
+						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">Formation en ligne :&nbsp;<abbr lang="fr" title="Deux Dimensions">2D</abbr></a></li>
+						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</a></li>
+						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</a></li>
 					</ul>
 
 				</li>
@@ -69,10 +69,10 @@
 					<img id="nav_fourth_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul class="no_display" id="fourth_dropdown">
-						<li><a title="Aller vers la section de mes langages maîtrisés" href="#html" hreflang="fr"><abbr lang="en" title="Hyper Text Markup Language">HTML</abbr></a></li>
-						<li><a title="Aller vers la section de mes langages maîtrisés" href="#css" hreflang="fr"><abbr lang="en" title="Cascading Style Sheet">CSS</abbr></a></li>
-						<li><a title="Aller vers la section de mes langages maîtrisés" href="#javascript" hreflang="fr">JavaScript</a></li>
-						<li><a title="Aller vers la section de mes langages maîtrisés" href="#php" hreflang="fr"><abbr lang="en" title="Hypertext Preprocessor">PHP</abbr></a></li>
+						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr"><abbr lang="en" title="Hyper Text Markup Language">HTML</abbr></a></li>
+						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr"><abbr lang="en" title="Cascading Style Sheet">CSS</abbr></a></li>
+						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr">JavaScript</a></li>
+						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr"><abbr lang="en" title="Hypertext Preprocessor">PHP</abbr></a></li>
 					</ul>
 
 				</li>
@@ -126,10 +126,10 @@
 				<li id="choice">Choississez un service</li>
 				<li>
 					<ul id="services_list">
-						<li><img src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
-						<li><img src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
-						<li><img src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
-						<li><img src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
+						<li id="www"><img id="www_image" src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
+						<li id="pencil"><img id="pencil_image" src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
+						<li id="responsive"><img id="responsive_image" src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
+						<li id="ranking"><img id="ranking_image" src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
 					</ul>
 				</li>
 
