Passage en em + résolution de bug css et js

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="La page d'acceuil de mon Currciculum vitae">
 	<meta name="keywords" content="CV, curriculum vitae, Marvin Pagnoul, HEPL, Front-End, Back-End, Web Designer, Web Developper">
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<title>Curriculum vitae &ndash; Marvin Pagnoul</title>
 </head>
 <body>
@@ -139,10 +139,10 @@
 				<li id="choice">Choississez un service</li>
 				<li>
 					<ul id="services_list">
-						<li id="www"><img id="www_image" src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
-						<li id="pencil"><img id="pencil_image" src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
-						<li id="responsive"><img id="responsive_image" src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
-						<li id="ranking"><img id="ranking_image" src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
+						<li id="www" data-name="Créer votre site web"><img id="www_image" src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
+						<li id="pencil" data-name="Styliser votre site web"><img id="pencil_image" src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
+						<li id="responsive" data-name="Rendre votre site responsive"><img id="responsive_image" src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
+						<li id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
 					</ul>
 				</li>
 
