Début du principe Dry

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -494,7 +494,7 @@
 			<li><a id="github" title="Aller vers mon profil Github" href="https://github.com/pagnoul-marvin" hreflang="fr">Github</a></li>
 
 		</ul>
-		<div id="flex_container">
+		<div id="languages_sponsors">
 			<label class="hidden" for="languages"></label>
 			<select id="languages">
 
