Début responsive + correction fautes d'orthographe

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -20,8 +20,8 @@
 
 			<h1 class="hidden">Navigation principale</h1>
 
-			<img id="logo" src="./img/icons/logo.svg" alt="Logo du site">
-			<img id="secondlogo" src="./img/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" height="40" width="118">
+			<img id="logo" src="./img/icons/logo.svg" alt="Logo du site" width="40" height="40">
+			<img id="secondlogo" src="./img/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
 
 			<ul id="nav_list">
 				<li id="first_nav_list_item">
@@ -170,7 +170,7 @@
 				<h1>Mes compétences</h1>
 
 				<p>
-					Je suis une personne polyvalente sachant aussi bien ma&icirc;triser le Front&ndash;End que le Back&ndash;End, l&rsquo;<abbr lang="en" title="User Interface">UI</abbr> et l&rsquo;<abbr lang="en" title="User EXperience">UX</abbr> sont tout autant important pour moi afin d&rsquo;avoir une application ou un site accessible pour toutes personnes. J&rsquo;apporte &agrave; ces comp&eacute;tences le soin, la rigueur, l&rsquo;envie de r&eacute;ussir et surtout l&rsquo;envie de satisfaire.
+					Je suis polyvalent sachant aussi bien ma&icirc;triser le Front&ndash;End que le Back&ndash;End. L&rsquo;<abbr lang="en" title="User Interface">UI</abbr> et l&rsquo;<abbr lang="en" title="User EXperience">UX</abbr> sont tout autant importants pour moi afin d&rsquo;avoir une application ou un site accessible pour toute personne. J&rsquo;apporte &agrave; ces comp&eacute;tences le soin, la rigueur, l&rsquo;envie de r&eacute;ussir et surtout l&rsquo;envie de satisfaire.
 				</p>
 
 				<a title="Aller vers mon portfolio" href="#" hreflang="fr">En savoir plus</a>
@@ -218,7 +218,7 @@
 
 							<li>
 								<p>
-									En janvier 2022, l&rsquo;univers de la <abbr lang="fr" title="Deux dimensions">2D</abbr> m&rsquo;a beaucoup int&eacute;ress&eacute; donc j&rsquo;ai d&eacute;cid&eacute; de faire une formation en ligne avant d&rsquo;entrer à l’&eacute;cole afin d&rsquo;avoir une base en <abbr lang="fr" title="Deux dimensions">2D</abbr>. Lors de cette formation, j&rsquo;y ai appris la suite Adobe (Illustrator, Photoshop et InDesign) et j&rsquo;y ai obtenu 4 dipl&ocirc;mes.
+									En janvier 2022, l&rsquo;univers de la <abbr lang="fr" title="Deux dimensions">2D</abbr> m&rsquo;a beaucoup int&eacute;ress&eacute; donc j&rsquo;ai d&eacute;cid&eacute; de faire une formation en ligne avant d&rsquo;entrer à l’&eacute;cole afin d&rsquo;avoir une base en <abbr lang="fr" title="Deux dimensions">2D</abbr>. Lors de cette formation, j&rsquo;ai appris la suite Adobe (Illustrator, Photoshop et InDesign) et j&rsquo;ai obtenu 4 dipl&ocirc;mes.
 								</p>
 							</li>
 
@@ -415,8 +415,8 @@
 						<li><p id="service_name">Cr&eacute;er un site web</p></li>
 						<li><p>Cr&eacute;ateur :&nbsp;Marvin Pagnoul</p></li>
 						<li><p>marvinpagnoul@icloud.com</p></li>
-						<li><p>04 94 16 40 75</p></li>
-						<li><p>Rue Louis Happart, 15 THYS</p></li>
+						<li><p>+32 494 16 40 75</p></li>
+						<li><p>Rue Louis Happart, 15 THYS, Belgique</p></li>
 						<li><p id="delete_article" title="Enlever ce service de mon panier">Enlever</p></li>
 
 					</ul>
