--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -26,6 +26,11 @@
 
 			<img id="logo" src="./img/icons/logo.svg" alt="Logo du site" width="40" height="40">
 			<img id="secondlogo" src="./img/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
+			<div>
+				<img id="basket" src="./img/ref/panier.svg" alt="Panier" height="35" width="27">
+				<span id="article_number">0</span>
+			</div>
+
 
 			<ul id="nav_list">
 				<li id="first_nav_list_item">
@@ -93,14 +98,6 @@
 						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Esprit d&rsquo;&eacute;quipe</a></li>
 						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Esprit comp&eacute;titif</a></li>
 					</ul>
-
-				</li>
-
-				<li>
-
-					<span id="article_number">0</span>
-
-					<img id="basket" src="./img/ref/panier.svg" alt="Panier" height="35" width="27">
 
 				</li>
 
