--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -26,7 +26,7 @@
 
 			<img id="logo" src="./img/icons/logo.svg" alt="Logo du site" width="40" height="40">
 			<img id="secondlogo" src="./img/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
-			<div>
+			<div id="bla">
 				<img id="basket" src="./img/ref/panier.svg" alt="Panier" height="35" width="27">
 				<span id="article_number">0</span>
 			</div>
@@ -118,8 +118,8 @@
 					<span class="line">|</span>
 					<span class="line">|</span>
 				</label>
-				<p id="content" class="banner-content">Pour pouvoir utiliser toutes les fonctionnalit&eacute;s du site, veuillez activer Javascript. Pour pouvoir activer Javascript appuyez sur ce boutton
-					<a href="https://support.google.com/adsense/answer/12654?hl=fr" hreflang="fr" title="Activer Javascript sur son navigateur">Activer Javascript</a>
+				<p id="content" class="banner-content">Pour pouvoir utiliser toutes les fonctionnalit&eacute;s du site, veuillez activer Javascript.
+					<a href="https://support.google.com/adsense/answer/12654?hl=fr" hreflang="fr" title="Activer Javascript sur son navigateur">Activer Javascript sur son navigateur</a>
 				</p>
 
 			</div>
