continuation responsive + ajout d'images manquantes

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -26,7 +26,7 @@
 
 			<img id="logo" src="./img/icons/logo.svg" alt="Logo du site" width="40" height="40">
 			<img id="secondlogo" src="./img/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
-			<div id="bla">
+			<div id="last_item">
 				<img id="basket" src="./img/ref/panier.svg" alt="Panier" height="35" width="27">
 				<span id="article_number">0</span>
 			</div>
@@ -128,31 +128,35 @@
 
 		<section id="services">
 
-			<img id="landing_image" src="" alt="Image de moi en monstre" height="" width="">
-
 			<h1 class="hidden">Mes informations personnelles</h1>
 
-			<ul id="informations">
+			<div id="flex_container">
 
-				<li itemprop="gender" id="gender">Homme</li>
-				<li><strong><span itemprop="givenName">Marvin</span> <span id="lastname" itemprop="familyName">Pagnoul</span></strong></li>
-				<li id="tariff">75&euro;&frasl;h</li>
-				<li id="choice">Choississez un service</li>
-				<li>
-					<ul id="services_list">
-						<li id="www" data-name="Créer votre site web"><img id="www_image" src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
-						<li id="pencil" data-name="Styliser votre site web"><img id="pencil_image" src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
-						<li id="responsive" data-name="Rendre votre site responsive"><img id="responsive_image" src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
-						<li id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
-					</ul>
-				</li>
+				<img id="landing_image" src="./img/ref/moi_fond_bleu.png" alt="Photo de moi avec un fond bleu" width="563" height="750">
 
-				<li><p title="Aller vers la section pour me contacter" id="contact">Me contacter</p></li><!--
 
-				--><li><img id="projects_number" src="./img/ref/projets.svg" alt="Image PEGI" height="80" width="60"></li>
+				<ul id="informations">
+
+					<li itemprop="gender" id="gender">Homme</li>
+					<li><strong><span itemprop="givenName">Marvin</span> <span id="lastname" itemprop="familyName">Pagnoul</span></strong></li>
+					<li id="tariff">75&euro;&frasl;h</li>
+					<li id="choice">Choississez un service</li>
+					<li>
+						<ul id="services_list">
+							<li id="www" data-name="Créer votre site web"><img id="www_image" src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
+							<li id="pencil" data-name="Styliser votre site web"><img id="pencil_image" src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
+							<li id="responsive" data-name="Rendre votre site responsive"><img id="responsive_image" src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
+							<li id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
+						</ul>
+					</li>
+
+					<li><p title="Aller vers la section pour me contacter" id="contact">Me contacter</p></li><!--
+
+					--><li><img id="projects_number" src="./img/ref/projets.svg" alt="Image PEGI" height="80" width="60"></li>
 
 			</ul>
 
+			</div>
 		</section>
 
 		<section id="competences">
@@ -166,7 +170,7 @@
 
 			</ul>
 
-			<img id="skills" src="" alt="Image de moi en monstre" height="" width="">
+			<img id="skills" src="./img/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" height="4032" width="3024">
 
 			<div id="competences_text">
 
