--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -38,10 +38,10 @@
 					<img id="nav_first_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul id="first_dropdown" class="no_display">
-						<li><a title="Aller vers la section de mes services" href="#services" hreflang="fr">Cr&eacute;er un site web</a></li>
-						<li><a title="Aller vers la section de mes services" href="#services" hreflang="fr">Cr&eacute;er un design</a></li>
-						<li><a title="Aller vers la section de mes services" href="#services" hreflang="fr">R&eacute;aliser du responsive web design</a></li>
-						<li><a title="Aller vers la section de mes services" href="#services" hreflang="fr">Am&eacute;liorer le r&eacute;f&eacute;rencement naturel</a></li>
+						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">Cr&eacute;er un site web</a></li>
+						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">Cr&eacute;er un design</a></li>
+						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">R&eacute;aliser du responsive web design</a></li>
+						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">Am&eacute;liorer le r&eacute;f&eacute;rencement naturel</a></li>
 					</ul>
 
 				</li>
@@ -134,7 +134,6 @@
 
 				<img id="landing_image" src="./img/ref/moi_fond_bleu.png" alt="Photo de moi avec un fond bleu" width="563" height="750">
 
-
 				<ul id="informations">
 
 					<li itemprop="gender" id="gender">Homme</li>
@@ -157,6 +156,7 @@
 			</ul>
 
 			</div>
+
 		</section>
 
 		<section id="competences">
@@ -169,21 +169,23 @@
 				<li id="backend">Back&ndash;End</li>
 
 			</ul>
+			<div id="skills_image">
 
-			<img id="skills" src="./img/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" height="4032" width="3024">
+				<img id="skills" src="./img/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" height="1022" width="1362">
 
-			<div id="competences_text">
+				<div id="competences_text">
 
-				<h1>Mes compétences</h1>
+					<h1>Mes compétences</h1>
 
-				<p>
-					Je suis polyvalent sachant aussi bien ma&icirc;triser le Front&ndash;End que le Back&ndash;End. L&rsquo;<abbr lang="en" title="User Interface">UI</abbr> et l&rsquo;<abbr lang="en" title="User EXperience">UX</abbr> sont tout autant importants pour moi afin d&rsquo;avoir une application ou un site accessible pour toute personne. J&rsquo;apporte &agrave; ces comp&eacute;tences le soin, la rigueur, l&rsquo;envie de r&eacute;ussir et surtout l&rsquo;envie de satisfaire.
-				</p>
+					<p>
+						Je suis polyvalent sachant aussi bien ma&icirc;triser le Front&ndash;End que le Back&ndash;End. L&rsquo;<abbr lang="en" title="User Interface">UI</abbr> et l&rsquo;<abbr lang="en" title="User EXperience">UX</abbr> sont tout autant importants pour moi afin d&rsquo;avoir une application ou un site accessible pour toute personne. J&rsquo;apporte &agrave; ces comp&eacute;tences le soin, la rigueur, l&rsquo;envie de r&eacute;ussir et surtout l&rsquo;envie de satisfaire.
+					</p>
 
-				<a title="Aller vers mon portfolio" href="#" hreflang="fr">En savoir plus</a>
+					<a title="Aller vers mon portfolio" href="#" hreflang="fr">En savoir plus</a>
+
+				</div>
 
 			</div>
-
 
 		</section>
 
@@ -481,7 +483,7 @@
 				<li class="no_display">
 					<ul>
 						<li><p>Votre panier est vide :&nbsp;aucun service n&rsquo;a &eacute;t&eacute; choisi.</p></li>
-						<li><a id="back_to_services" href="#services" title="Revenir à la section des services" hreflang="fr">Choisir un service</a></li>
+						<li><a id="back_to_services" href="#services_list" title="Revenir à la section des services" hreflang="fr">Choisir un service</a></li>
 					</ul>
 				</li>
 
