Fin responsive + début optimisation javascript

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -483,7 +483,7 @@
 				<li class="no_display">
 					<ul>
 						<li><p>Votre panier est vide :&nbsp;aucun service n&rsquo;a &eacute;t&eacute; choisi.</p></li>
-						<li><a id="back_to_services" href="#services_list" title="Revenir à la section des services" hreflang="fr">Choisir un service</a></li>
+						<li><a id="back_to_services" href="#choice" title="Revenir à la section des services" hreflang="fr">Choisir un service</a></li>
 					</ul>
 				</li>
 
@@ -546,6 +546,6 @@
 		</ul>
 
 	</footer>
-	<script src="./js/main.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </body>
 </html>
