Fin optimisation javascript + résolution de quelques bug

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -38,10 +38,10 @@
 					<img id="nav_first_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul id="first_dropdown" class="no_display">
-						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">Cr&eacute;er un site web</a></li>
-						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">Cr&eacute;er un design</a></li>
-						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">R&eacute;aliser du responsive web design</a></li>
-						<li><a title="Aller vers la section de mes services" href="#services_list" hreflang="fr">Am&eacute;liorer le r&eacute;f&eacute;rencement naturel</a></li>
+						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">Cr&eacute;er un site web</a></li>
+						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">Cr&eacute;er un design</a></li>
+						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">R&eacute;aliser du responsive web design</a></li>
+						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">Am&eacute;liorer le r&eacute;f&eacute;rencement naturel</a></li>
 					</ul>
 
 				</li>
@@ -91,12 +91,12 @@
 					<img id="nav_fifth_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul class="no_display" id="fifth_dropdown">
-						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Cr&eacute;ativit&eacute;</a></li>
-						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Recherche</a></li>
-						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Organisation</a></li>
-						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Autonomie</a></li>
-						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Esprit d&rsquo;&eacute;quipe</a></li>
-						<li><a title="Aller vers la section de mes soft skills" href="#skills" hreflang="fr">Esprit comp&eacute;titif</a></li>
+						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Cr&eacute;ativit&eacute;</a></li>
+						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Recherche</a></li>
+						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Organisation</a></li>
+						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Autonomie</a></li>
+						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Esprit d&rsquo;&eacute;quipe</a></li>
+						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Esprit comp&eacute;titif</a></li>
 					</ul>
 
 				</li>
@@ -538,7 +538,7 @@
 			<li><a id="skills_footer" title="Retourner vers mes compétences" href="#competences" hreflang="fr">Mes comp&eacute;tences</a></li>
 			<li><a id="formations_footer" title="Retourner vers mes formations" href="#formations" hreflang="fr">Mes formations</a></li>
 			<li><a id="languages_footer" title="Retourner vers mes langages maîtrisés" href="#langages" hreflang="fr">Mes langages ma&icirc;tris&eacute;s</a></li>
-			<li><a id="softskills_footer" title="Retourner vers mes soft skills" href="#skills" hreflang="fr">Mes soft skills</a></li>
+			<li><a id="softskills_footer" title="Retourner vers mes soft skills" href="#soft_skills" hreflang="fr">Mes soft skills</a></li>
 
 			<li id="mail_footer" itemprop="email">marvinpagnoul@icloud.com</li>
 			<li id="tel_footer" itemprop="telephone">04 94 16 40 75</li>
